--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "messappbybineet",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
-  "homepage": "https://github.com/studentsmessbybineet/Mess",
+  "homepage": "https://gitname.github.io/StudentsMess",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
