--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "messappbybineet",
   "version": "0.1.1",
   "private": true,
-  "homepage": "https://studentsmessbybineet.github.io/StudentsMess",
+  "homepage": "https://studentsmessbybineet.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
